Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - fix Module::Build::Tiny prohibition to also work with
            [ModuleBuildTiny::Fallback]

0.095     2015-06-15 03:37:11Z
          - switch to my weaver plugin bundle in newly-minted distributions;
            preventing older sharedir installs from interfering
          - always copy ppport.h from release back to the repository
          - define weaver plugin bundle config in a more compact and readable
            syntax
          - do not permit Module::Build::Tiny to be used as an installer if
            perl 5.006 compatibility is desired
          - remove use of build_warnings option in [Git::Check] (added in
            0.074)

0.094     2015-06-01 03:30:00Z
          - eliminate remaining uses of List::MoreUtils
          - remove universal application of [ShareDir] - distributions using
            sharedirs must add it themselves
          - add Pod::Weaver::PluginBundle::Author::ETHER and use it in my dzil
            plugin bundle

0.093     2015-05-22 03:44:45Z
          - move kwalitee.t to xt/author
          - reduced logging output during normal builds

0.092     2015-04-12 06:18:30Z
          - update all the $VERSION values, not just the first in each file
          - generate meta provides data from exactly what is in each file
          - fix whitespace in minted dist.ini for Dist::Zilla plugins

0.091     2015-03-28 04:56:11Z
          - avoid gathering any existing ppport.h, as well as Makefile.PL and
            other files that we regenerate during the build
          - never gather inc/ExtUtils/MakeMaker/Dist/Zilla/Develop.pm

0.090     2015-03-19 06:56:54Z
          - drop annoying -TRIAL suffix on git tag names - tags will now
            always be in the consistent form: v1.234
          - Changes in the release snapshot commit now exactly matches what
            was in the release (without the $NEXT template variable)
